# castbase

./: .gitignore  .gitmodules  CMakeLists.txt  compile.bat  launch.bat
cmake/: GetGitRevisionDescription.cmake
ext/: LightHook.h
libs/: mathlib.lib  tier2.lib  tier3.lib
src/: .clang-format  PluginInfo.cpp.in
src/base/: Common.h  Hook.h  Hooks.h  Interfaces.cpp  Interfaces.h  Modules.cpp  Modules.h  Patterns.h  Plugin.cpp  Plugin.h  Sig.cpp  Sig.h
src/base/fills/: ivideomode.h  padding.h  popen.h
src/modules/: Recorder.cpp  Recorder.h  Resolution.cpp  Resolution.h
src/modules/Recorder/: AudioRecorder.cpp  AudioRecorder.h  Recorder.cpp  Recorder.h  VideoRecorder.cpp  VideoRecorder.h
src/modules/Resolution/: Resolution.cpp
